rest/rest-ingress.yaml
#
# Local / ingress-nginx (Docker Desktop, kind, etc.). For GKE + GCE load balancer use rest-ingress-gce.yaml.
# See https://kubernetes.io/docs/concepts/services-networking/ingress/
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rest
            port:
              number: 5000
